# taskbar_monitor_app

./: .gitignore  README.md  TaskbarMonitor.spec  agent-instructions-token.bundle.json  pyproject.toml  requirements.txt  test_pdh.py  test_pdh2.py  test_wmic.py  update_main_v2.py
.github/workflows/: git-sanity.yml  python-check.yml  security-scan.yml
.intelag/: .gitignore  agent-instructions-state.json  dashboard-tools-state.json
.intelag/.agent/: .markdownlint.jsonc  CHANGELOG.md  CONSUMERS.md  LICENSE  README.md  glossary.md  id-index.json  lychee.toml
.intelag/.agent/archive/: legacy-rule-aliases.md  project-memory-move-map.md
.intelag/.agent/conventions/: frontmatter.md  rule-id.md  voice.md
.intelag/.agent/personas/: flutter-engineer.md  planner.md  reviewer.md  ui-kit-migrator.md
.intelag/.agent/plan/: 2026-04-28_09-16-34_improvement.md
.intelag/.agent/routing/: model-selection.md
.intelag/.agent/scripts/: build_id_index.py  check_citation_artifacts.py  check_frontmatter.py  check_persona_token_budget.py  check_rule_ids.py  frontmatter.py
.intelag/.agent/shared/: handoff-summary.md  logging.md  secrets.md  shell-operations.md  source-citations.md  token-efficiency.md
.intelag/.agent/stacks/: README.md
.intelag/.agent/templates/: plan-sections.csv  request.md
.intelag/commands/: commands.json  renaming_plan.yaml
.intelag/commands/scripts/: _venv_utils.py  apply_intelag_python_rules.py  build.py  bump_pubspec_version.py  create_request.py  format_and_lint.py  full_check.py  git_branch_tree.py  git_clone_folder.py  git_edit_commit.py  git_list_large_files.py  git_rename_repo.py  git_replace_secrets.py  git_sanity_check.py  list_large_files.py  monkeytype_apply.py  refactor_repo.py  remove_files.py  secure_scripts.py  security_check.py  trufflehog_check.py  version_bump.py
.intelag/issues/: 2026-04-21_15-56-43-883.txt
.intelag/python/: mypy.ini  pyproject.toml  pyrightconfig.json  ruff.toml
.intelag/reports/: folders_.intelag_2026-02-11_18-06-57-118.txt
.intelag/reports/scroll_harness/: metrics.json
.intelag/templates/: LICENSE  README.md  request-ai-plan.md
.intelag/tools/log_lazy_formatter/: README.md  __init__.py  log_lazy_formatter.py
.intelag/tools/type_annotation_fixer/: __init__.py  type_annotation_fixer.py
docs/: cleanup_runbook.md  sensors_runbook.md
scripts/: _gen_capture_controller.py  _screenshot_service_original.py  _split_screenshot_package.py  build_exe.ps1  fetch_sensor_dll.py  run.bat  scroll_capture_harness.py  svg_to_ico.py
src/: main.py
src/assets/sensors/: .gitkeep
src/core/: __init__.py  config.py  theme.py
src/services/: __init__.py  app_chord_service.py  app_metrics_probe.py  auto_clean_watchdog.py  cleanup_runner.py  clipboard_history_service.py  cmdline_kill_wmi.py  microphone_recorder.py  native_hotkey_service.py  notification_service.py  process_snapshot.py  resource_manager.py  screenshot_service.py  screenshot_settings.py  shortcut_service.py  system_info.py  system_sampler.py  system_snapshot.py  uia_scroll_targets.py  uia_service.py  win_elevation.py
src/services/resource_control/: __init__.py  bounds.py  cancel.py  candidate_scorer.py  constants.py  flush_phase.py  history.py  models.py  planner.py  profiles.py  progress.py  result_render.py  runner_common.py  service.py  skip_reasons.py  snapshot_reclaim.py  snapshot_scope.py  system_reclaim.py  system_scan.py  tracker.py  tray_icons.py  uss_prefetch.py  watched_op.py  win_privilege.py  (+1 more)
src/ui/: __init__.py  app_chord_dialog.py  app_menu_sections.py  auto_clean_settings_dialog.py  autostart.py  battery_widget.py  capture_collection.py  capture_controller.py  capture_delay_overlay.py  capture_selectors.py  capture_toolbar.py  cleanup_controller.py  cleanup_history_dialog.py  cleanup_menu.py  cleanup_preview_dialog.py  cleanup_progress_dialog.py  cleanup_result_dialog.py  clipboard_popup.py  cmdline_kill_dialog.py  kill_confirm_dialog.py  menu_handler.py  monitor_lifecycle.py  monitor_protocol.py  monitor_settings_dialog.py  pinned_capture_overlay.py  process_popup.py  recording_settings_dialog.py  resource_settings_dialog.py  scope_manager.py  screenshot_editor_dialog.py  screenshot_menu.py  screenshot_overlay.py  screenshot_settings_dialog.py  scroll_capture_progress.py  self_overhead_dialog.py  sensor_diagnostics_dialog.py  snapshot_diff_dialog.py  snapshot_live_cleanup_dialog.py  snapshot_manager_dialog.py  system_tray.py  (+3 more)
tests/: conftest.py
tests/services/: test_app_chord_service.py  test_app_metrics_probe.py  test_auto_clean_watchdog.py  test_microphone_recorder.py  test_process_snapshot.py  test_sampler_cadence.py  test_screenshot_service.py  test_screenshot_settings.py  test_scroll_harness.py  test_shared_process_table.py  test_shortcut_service.py  test_system_sampler.py  test_uia_service.py
tests/ui/: test_capture_collection.py  test_capture_delay_overlay.py  test_capture_toolbar.py  test_cleanup_progress_dialog.py  test_cleanup_result_dialog.py  test_cleanup_watchdog.py  test_dialog_positioning.py  test_monitor_lifecycle.py  test_monitor_settings_dialog.py  test_pinned_capture_overlay.py  test_recording_settings_dialog.py  test_resource_settings_dialog.py  test_scope_manager.py  test_screenshot_editor_dialog.py  test_screenshot_menu.py  test_self_overhead_dialog.py  test_sensor_diagnostics_dialog.py  test_snapshot_live_cleanup_dialog.py
(+112 files in other folders)
